WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280067
Non-unified build fixes, mid September 2024 edition (bis)
https://bugs.webkit.org/show_bug.cgi?id=280067
Summary
Non-unified build fixes, mid September 2024 edition (bis)
Adrian Perez
Reported
2024-09-20 08:23:33 PDT
Follow up to
bug #280035
, because it didn't cover a few instances that affect the GTK and WPE ports.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-09-20 09:45:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33982
EWS
Comment 2
2024-09-20 15:14:01 PDT
Committed
284015@main
(7d3da85195ca): <
https://commits.webkit.org/284015@main
> Reviewed commits have been landed. Closing PR #33982 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-20 15:15:19 PDT
<
rdar://problem/136389679
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug