Non-unified build fixes, mid September 2024 edition (bis) https://bugs.webkit.org/show_bug.cgi?id=280067

Unreviewed non-unified build fixes.

* Source/JavaScriptCore/runtime/JSIteratorPrototype.cpp: Remove uneeded
  JSIterator.h inclusion.
* Source/JavaScriptCore/wasm/WasmParser.h: Add missing
  WasmTypeDefinitionInlines.h inclusion.
* Source/JavaScriptCore/wasm/WasmTable.cpp: Remove unneeded
  JSWebAssemblyTable.h inclusion.
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.h:
  Add missing wtf/glib/GRefPtr.h and wtf/glib/GUniquePtr.h missing
  inclusions.
* Source/WebCore/Modules/webaudio/AudioBuffer.cpp: Add missing
  ScriptWrappableInlines.h inclusion.
* Source/WebKit/GPUProcess/GPUProcess.cpp: Add missing WebCore::
  namespace prefixes.
(WebKit::GPUProcess::setMockCaptureDevicesEnabled):
(WebKit::GPUProcess::setOrientationForMediaCapture):
(WebKit::GPUProcess::addMockMediaDevice):
(WebKit::GPUProcess::clearMockMediaDevices):
(WebKit::GPUProcess::removeMockMediaDevice):
(WebKit::GPUProcess::setMockMediaDeviceIsEphemeral):
	    (WebKit::GPUProcess::resetMockMediaDevices):
(WebKit::GPUProcess::setMockCaptureDevicesInterrupted):
(WebKit::GPUProcess::triggerMockCaptureConfigurationChange):
* Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.cpp: Add missing
  Logging.h inclusion.
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteDevice.cpp: Ditto.
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp: Add
  missing WebCore/TextureMapperPlatformLayerProxy.h inclusion.

Canonical link: https://commits.webkit.org/284015@main