Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.cpp
@@ -30,6 +30,7 @@
 
 #include "GPUConnectionToWebProcess.h"
 #include "IPCSemaphore.h"
+#include "Logging.h"
 #include "RemoteImageBufferMessages.h"
 #include "RemoteRenderingBackend.h"
 #include "RemoteSharedResourceCache.h"
